# OOP-Labs

lab0 - MathParser/: CMakeLists.txt  main.cpp
lab0 - MathParser/src/: MathParser.cpp
lab0 - String/: main.cpp
lab1 - CircularBuffer/: CMakeLists.txt  main.cpp
lab1 - CircularBuffer/src/: Buffer.h
lab1 - CircularBuffer/test/: testLab1.cpp
lab1b - Circular Buffer/src/: Buffer.cpp
lab2a - Prisoner's dilemma/: CMakeLists.txt  main.cpp
lab2a - Prisoner's dilemma/src/: game.cpp  game.h  parser.cpp  parser.h  strategies.cpp  strategies.h  strategyFactory.h
lab3 - Sound Processor/: CMakeLists.txt  config.txt  main.cpp
lab3 - Sound Processor/src/: CFGParser.cpp  CFGParser.h  CMDParser.cpp  CMDParser.h  Converters.cpp  Converters.h  Factory.h  Sound.h  WAV.cpp  WAV.h
lab4 - Templates/: CMakeLists.txt  main.cpp  test.csv
lab4 - Templates/src/: CSVParser.h  CustomTuple.h
